fixed menu + animation using z-index

--- a/css/style-j.css
+++ b/css/style-j.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: flex-start;
 
-  /* position: relative; */
+  position: relative;
   margin-bottom: 5px;
 }
 
@@ -13,7 +13,6 @@
 
   border: 1px solid black;
   margin: 1px;
-
 }
 
 .top {
